fix: clear screen if operation is too long

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: #f3d021;
+  background-color: #f3bb21;
 }
 
 .calculator {
@@ -29,7 +29,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 350px;
-  height: 80px;
+  height: 85px;
   text-align: center;
   font-size: 2.5rem;
   border: 2px solid rgba(85, 75, 75, 0.4);
@@ -79,7 +79,7 @@ button:active {
   box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35),
     inset 0 5px 5px rgba(0, 0, 0, 0.5), inset 0 15px 25px rgba(0, 0, 0, 0.35);
   color: #fff;
-  text-shadow: 0 0 5px #f3cd21, 0 0 8px #f3d021;
+  text-shadow: 0 0 5px #f3bb21, 0 0 8px #f3bb21;
 }
 
 .equals {
